# Gemini-CLI

./: README.md  classes.py  main.py  pyproject.toml  requirements.txt
gemini/: __main__.py  api.py  cookie_handler.py  utils.py
